<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iems5722.group11.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/main_userid_et"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_with"
        android:id="@+id/main_entergame_btn"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/introduction"/>

    <!--Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="drawing activity"
        android:onClick="toDrawingActivity"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="qr code"
        android:onClick="toQRCodeActivity"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="viewing activity"
        android:onClick="toViewingActivity"/-->
</LinearLayout>
