<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/draw_frame"
    tools:context="com.iems5722.group11.DrawingActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/draw_linear"
        android:background="#FFCCCCCC"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60"
            android:id="@+id/draw_timer"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:id="@+id/draw_puzzle"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="Puzzle field"/>
        <!--LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal" >
            <ImageButton
                android:id="@+id/new_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/start_new"
                android:src="@drawable/new_pic" />
            <ImageButton
                android:id="@+id/draw_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/brush"
                android:src="@drawable/brush" />
            <ImageButton
                android:id="@+id/erase_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/erase"
                android:src="@drawable/eraser" />
            <ImageButton
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/save"
                android:src="@drawable/save" />
        </LinearLayout-->

        <com.iems5722.group11.DrawingView
            android:id="@+id/drawing"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="#FFFFFFFF" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="@dimen/listview_height"
            android:id="@+id/draw_chat"
            android:transcriptMode="alwaysScroll"
            android:stackFromBottom="true"
            android:scrollbars="none"
            android:text="Chat Field" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/draw_btn"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/brush"
                        android:layout_width="50dp"
                        android:background="#FFCCCCCC"
                        android:src="@drawable/brush" />
                    <SeekBar
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/brush_size"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/erase_btn"
                        android:layout_width="50dp"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/erase"
                        android:background="#FFCCCCCC"
                        android:src="@drawable/eraser" />
                    <SeekBar
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/erase_size"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >
                <LinearLayout
                    android:id="@+id/paint_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FF660000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF660000" />

                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FFFF0000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFF0000" />

                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FFFF6600"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFF6600" />

                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FFFFCC00"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFFCC00" />

                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FF009900"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF009900" />

                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FF009999"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF009999" />
                </LinearLayout>
                <!-- Bottom Row -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FF0000FF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF0000FF" />

                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FF990099"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF990099" />

                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FFFF6666"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFF6666" />

                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FFFFFFFF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFFFFFF" />

                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FF787878"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF787878" />

                    <ImageButton
                        android:layout_width="@dimen/paint_size"
                        android:layout_height="@dimen/paint_size"
                        android:layout_margin="2dp"
                        android:background="#FF000000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF000000" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/draw_ready"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/draw_ready_tv"/>
        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/draw_finish"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <!--pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/src_anim"
            /-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/draw_result"
            android:text="hello"/>

    </LinearLayout>

</FrameLayout>